added teams part

--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<link rel="icon" type="image/png" href="img/favicon.png">
-	<title>OSDHack'22</title>
+	<title>OSDHack'22 | Rules and FAQs</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -32,7 +32,7 @@
 			<![endif]-->
 </head>
 <div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div>
-	<a href="#top">
+	<a href="index.html" target="_blank">
 		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
 			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 		</div>
@@ -67,8 +67,8 @@
 					<li><a href="index.html#about">About</a></li>
 					<li><a href="index.html#guest_speakers">Speakers</a></li>
 					<li><a href="index.html#schedule">Schedule</a></li>
-					<li><a href="index.html#rules">Rules</a></li>
-					<li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+					<li class="active"><a href="rules.html ">Rules</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -76,8 +76,10 @@
 		<!-- /container -->
 	</header>
 	<!-- /Header -->
-  <h1>Rules</h1>
-<ul class="rules">
+  
+   <h1>Rules</h1> 
+   <hr class="style-two">
+<ul class="rules" >
     <li>This Hackathon is open for everyone.</li>
     <li>There is no restriction on the type of project you come up with, or the languages you use. It can be
         anything from a web app to a system library.</li>
@@ -107,10 +109,10 @@
 
 
 <div class='faq'>
+<h1>FAQs</h1>
+<hr class="style-two">
 <div class="global-label">
-<div class="global-label-text">
-Frequently Asked Questions (FAQs)
-</div>
+
 
 </div>
 <!--1 question-->
@@ -256,5 +258,15 @@ Frequently Asked Questions (FAQs)
 
     </div>
   </div>
+</div>
+<div class="text-center">
+
+  <!-- <span class="copyright"> -->
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  &copy;
+  <script>document.write(new Date().getFullYear());</script> All rights reserved by <a
+    href="https://osdc.netlify.app/" target="_blank">OSDC</a>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  <!-- </span> -->
 </div>
 <script src="rules.js"></script>
