added teams part (#50)
* correct some spellings

* added meta image to repo

* added teams part

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:title" content="OSDHack'22">
 	<meta property="og:description"
 		content="OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea.">
-	<meta property="og:image" content="https://cdn.discordapp.com/attachments/791012601190416417/927692353387503627/unknown.png">
+	<meta property="og:image" content="https://raw.githubusercontent.com/sarthakkathpalia/OSDHack/master/img/META%20IMAGE.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
 	<meta property="twitter:title" content="OSDHack'22">
 	<meta property="twitter:description"
 		content="OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and tech enthusiasts where participants will brainstorm and build on their idea.">
-	<meta property="twitter:image" content="https://cdn.discordapp.com/attachments/791012601190416417/927692353387503627/unknown.png">
+	<meta property="twitter:image" content="https://raw.githubusercontent.com/sarthakkathpalia/OSDHack/master/img/META%20IMAGE.png">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	<title>OSDHack'22</title>
@@ -138,8 +138,8 @@
 					<li><a href="#about">About</a></li>
 					<li><a href="#guest_speakers">Speakers</a></li>
 					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#rules">Rules</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="rules.html"target=_blank>Rules&nbsp;<i class="fas fa-external-link-alt"></i></a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -217,7 +217,7 @@
 					<div class="about-content">
 						<p>OSDHack 2022 is a nationwide open hackathon being organised by the Open Source Developers
 							Community of JIIT, Noida. It is a 48-hour long congregation of like-minded hackers and
-							techenthusiasts where participants will brainstorm and build on their idea.
+							tech enthusiasts where participants will brainstorm and build on their idea.
 						</p>
 
 
@@ -620,20 +620,28 @@
 							</div>
 							<!-- /container -->
 						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+			<br>
+			<br>
+
 						<!-- /Event Schedule -->
 
-						<!-- CTA -->
+						<!-- CTA
 						<div id="rules" class="section">
-							<!-- background image -->
-							<!--	<div class="section-bg" style="background-image:url(img/background03.jpg);  "
-								data-stellar-background-ratio="0.5"></div>-->
-							<!-- /background image -->
+							background image
+								<div class="section-bg" style="background-image:url(img/background03.jpg);  "
+								data-stellar-background-ratio="0.5"></div>
+							/background image
 
-							<!-- container -->
+							container
 							<div class="container">
-								<!-- container -->
+								container
 								<div class="row">
-									<!-- cta content -->
+									cta content
 									<div class="col-md-8">
 										<hr class="style-two">
 										<div class="cta-content text-center" id="rules_faqs">
@@ -647,22 +655,112 @@
 										</div>
 										<hr class="style-two">
 									</div>
-									<!-- /cta content -->
+									/cta content
 								</div>
-								<!-- /row -->
+								/row
 							</div>
-							<!-- /container -->
+							/container
 						</div>
-						<!-- /CTA -->
+						/CTA -->
 
 
+	<!-- /Galery -->
+	<!-- Team -->
+   <div class="team>"
+	<div id="team" class="section">
+		<!-- container -->
+		<div class="container">
+			<!-- row -->
+			<div class="row">
+				<!-- section title -->
+				<div class="section-title">
+					<h3 class="title"><span>Team</span> <span style="color: #dd0a37;">Members</span></h3>
+				</div>
+				<!-- /section title -->
 
+				<!-- contact -->
+				<div class="col-sm-4">
+					<div class="contact">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+						</div>
+						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
+							<h3>Ujjwal Sharma</h3>
+						</a>
+						<h4 style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
+					</div>
+				</div> <!-- contact -->
+				<div class="col-sm-4">
+					<div class="contact">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker2.jpeg" alt="">
+						</div>
+						<a href="https://www.linkedin.com/in/vaidik/?originalSubdomain=in" target="_blank">
+							<h3>Vaidik Kapoor</h3>
+						</a>
+						<h4 style="margin-top: -10px;">VP Engineering, Grofers</h4>
+					</div>
+				</div> <!-- contact -->
+				<div class="col-sm-4">
+					<div class="contact">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker3.jpeg" alt="">
+
+						</div>
+						<a href="https://www.linkedin.com/in/atrisharma/?originalSubdomain=in" target="_blank">
+							<h3>Atri Sharma</h3>
+						</a>
+						<h4 style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
+					</div>
+
+				</div>
+				<!--Centering the remaining two divs-->
+				<div class="col-sm-2">
+					<!--for begining-->
+				</div>
+				<!-- contact -->
+				<div class="col-sm-4">
+					<div class="contact">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker4.jpeg" alt="">
+						</div>
+						<a href="https://www.linkedin.com/in/varodek" target="_blank">
+							<h3>Vaibhav Gupta</h3>
+						</a>
+						<h4 style="margin-top: -10px;">Software Engineer, CERN</h4>
+					</div>
+				</div>
+				<!-- contact -->
+				<div class="col-sm-4">
+					<div class="contact">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker5.jpeg" alt="">
+						</div>
+						<a href="https://www.linkedin.com/in/rexagod" target="_blank">
+							<h3>Pranshu Srivastava</h3>
+						</a>
+						<h4 style="margin-top: -10px;">Software Engineer, Red Hat</h4>
+					</div>
+
+				</div>
+				<div class="col-sm-2">
+
+				</div>
+			</div>
+			<!-- /row -->
+		</div>
+	</div></div>
+		<!-- /container -->
 						<!-- Contact -->
+						<div class="contact-info-center">
 						<div id="contact" class="section">
 							<!-- container -->
 							<div class="container">
 								<!-- row -->
 								<div class="row">
+									<div class="col-md-2">
+
+									</div>
 									<div class="col-md-8">
 										<!-- section title -->
 										<div class="section-title">
@@ -676,7 +774,7 @@
 										<div class="col-sm-4">
 											<div class="contact">
 												<h3>Venue</h3>
-												<p>This hackathon is being hosted online!</p>
+												<p>Anywhere (as long as there's internet).</p>
 											</div>
 										</div>
 										<!-- /contact -->
@@ -749,6 +847,7 @@
 							<!-- /container -->
 
 						</div>
+						</div>
 						<!-- /Contact -->
 						<hr>
 						<!-- Footer -->
@@ -757,6 +856,7 @@
 							<div class="container">
 								<!-- row -->
 								<div class="row">
+									<div class="col-md-2"></div>
 
 									<!-- footer logo -->
 									<div class="col-md-4">
