added osdc and jiit on home page (#52)
* improved rules page

* added osdc and jiit on top

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
 					<!-- home content -->
 					<div class="col-md-8 col-md-offset-2">
 						<div class="home-content">
+							<div class="home-organizer" style="color: #dd0a37;">
+								<h3>Open Source Developers Community</h3>
+								<h4>Jaypee Institute of Information Technology</h4>
+								<img src="img\presents.png" class="presents">
+								<h3>Killing the cliché</h3>
+							</div>
 							<h1>OSDHack'22</h1>
 							<!-- <h4 class="lead">OSDHack 2022 is a nationwide open hackathon
 								being organised by the Open Source Developers
