added JIIT logo

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="rules.html"target=_blank>Rules&nbsp;<i class="fas fa-external-link-alt"></i></a></li>
+					<li id="jiitlogo"><img src="./img/jiit logo.png"></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -174,7 +175,8 @@
 								<img src="img\presents.png" class="presents">
 								<h3>Killing the cliché</h3>
 							</div>
-							<h1>OSDHack'22</h1>
+							<div class="">
+							<p style="font-weight: 900; font-size: 130px;">OSDHack'22</p> </div>
 							<!-- <h4 class="lead">OSDHack 2022 is a nationwide open hackathon
 								being organised by the Open Source Developers
 								Community of JIIT, Noida. It is a 48-hour long
