--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
 								<img src="img\presents.png" class="presents">
 								<h3>Killing the cliché</h3>
 							</div>
-							<div class="">
-							<p style="font-weight: 900; font-size: 130px;">OSDHack'22</p> </div>
+							<h1>OSDHack'22</h1>
 							<!-- <h4 class="lead">OSDHack 2022 is a nationwide open hackathon
 								being organised by the Open Source Developers
 								Community of JIIT, Noida. It is a 48-hour long
