Added JIIT Logo (#53)
* added JIIT logo

* reverted title change

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="rules.html"target=_blank>Rules&nbsp;<i class="fas fa-external-link-alt"></i></a></li>
+					<li id="jiitlogo"><img src="./img/jiit logo.png"></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
