--- a/rules.html
+++ b/rules.html
@@ -80,27 +80,16 @@
    <h1>Rules</h1> 
    <hr class="style-two">
 <ul class="rules" >
-    <li>This Hackathon is open for everyone.</li>
-    <li>There is no restriction on the type of project you come up with, or the languages you use. It can be
-        anything from a web app to a system library.</li>
-    <li>You must document precisely how to install, setup and run your project. This should be as easy as
-        possible
-        (consider using dependency managers).</li>
-    <li>All code must be written and committed within the time constrictions of the Hackathon. Late commits
-        may be
-        reverted, so make sure you leave enough time to bug test your program.</li>
-    <li>You can reuse code from other open source projects provided that you give them appropriate
-        attribution and
-        follow their LICENSE agreements.</li>
-    <li>Allowed team size: 2-4 members</li>
-    <li>You must get contributions from every member of your team, if you have an issue with someone on your
-        team
-        please contact a member of the organising team. These contributions do not necessarily have to be
-        code, for
-        example it's absolutely fine for someone to contribute management, documentation, graphics or audio.
-        <!--Team members that do not contribute will be removed from the Code Jam. -->
-    <li>You must use Git as a version control system.</li>
-    <!-- <li>All code and assets must be compatible with an Open-Source license. This is because we will be merging your submission into this repo at the end of the jam.</li> -->
+    <li>The Hackathon is open to all.</li>
+    <li>Allowed team size: 2-4 members.</li>
+    <li>There is no restriction on the type of project you come up with, or the languages/tools you use. It can be
+      anything from a web app to a device driver (as long as it is not a hardware project).</li>
+    <li>All code and assests must be created and committed within the time constrictions of the Hackathon. Late commits may not be considered, so avoid any last minute Red Bull rushes.</li>
+    <li>Reusing or incorporating existing open source code or copyright free assests to create your magic (because that's what someone else's code seems like) is allowed, provided that they are appropriately attributed and their license agreements are followed.</li>
+    
+    <li>All code written must be compatible with an Open-Source license and should be public.</li>
+    <li>Git should be your primary version control system.</li>
+    <li>The Organizing Team's decision on conflicts, results, prizes or any other dispute would be made in all fairness and stands final.</li>
 </ul>
 
 
