changed rules page colors

--- a/rules.html
+++ b/rules.html
@@ -68,7 +68,7 @@
 					<li><a href="index.html#guest_speakers">Speakers</a></li>
 					<li><a href="index.html#schedule">Schedule</a></li>
           <li><a href="index.html#contact">Contact</a></li>
-					<li class="active"><a href="rules.html ">Rules</a></li>
+					<li class="active" id="rules_active"><a href="rules.html ">Rules</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
