changed code of conduct div bg style

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			height: 210px;
 			overflow: hidden;
 			border-radius: 50%;
-			border: 5px solid #dd0a37;
+			border: 5px solid #c71239;
 			margin: 0 auto;
 		}
 
@@ -171,7 +171,7 @@
 					<!-- home content -->
 					<div class="col-md-8 col-md-offset-2">
 						<div class="home-content">
-							<div class="home-organizer" style="color: #dd0a37;">
+							<div class="home-organizer" style="color: #c71239;">
 								<h3>Open Source Developers Community</h3>
 								<h4>Jaypee Institute of Information Technology</h4>
 								<p style="color: white;">presents</p>
@@ -220,7 +220,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">the Hackathon</span></h3>
+					<h3 class="title"><span>About</span> <span style="color: #c71239;">the Hackathon</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -328,7 +328,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Supported </span> <span style="color: #dd0a37;">by</span></h3>
+					<h3 class="title"><span>Supported </span> <span style="color: #c71239;">by</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -377,7 +377,7 @@
 			<div class="row">
 					<!-- section title -->
 					<div class="section-title">
-						<h3 class="title"><span>Prizes</span> <span style="color: #dd0a37;">and More</span></h3>
+						<h3 class="title"><span>Prizes</span> <span style="color: #c71239;">and More</span></h3>
 					</div>
 					<!-- /section title -->
 	
@@ -462,14 +462,14 @@
 	<div class="button"><button data-toggle="collapse" data-target="#demo" onclick="prizes()" id ="viewbutton"
 			style="display: block;
 			padding: 14px 50px;
-			background: #dd0a37;
+			background: #c71239;
 			color: #fff;
 			text-transform: uppercase;
 			border: none;
 			border-radius: 2px;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
-			border: 2px solid #dd0a37;
+			border: 2px solid #c71239;
 			margin-right: 10px;;">Show More </button></div>
 
 
@@ -481,7 +481,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Guest</span> <span style="color: #dd0a37;">Speakers</span></h3>
+					<h3 class="title"><span>Guest</span> <span style="color: #c71239;">Speakers</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -567,7 +567,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Hackathon</span> <span style="color: #dd0a37;">Schedule</span></h3>
+					<h3 class="title"><span>Hackathon</span> <span style="color: #c71239;">Schedule</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -812,7 +812,7 @@
 										<div class="cta-content text-center" id="rules_faqs">
 											<div class="section-title">
 												<h2 class="title"><span>Rules & </span><span
-														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
+														style="color: #c71239;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
 											<a style="margin-top: -30px;" href="rules.html" target="_blank"
@@ -836,7 +836,7 @@
 							<div class="container">
 								<div class="row" >
 								<div class="section-title">
-									<h3 class="title"><span>Sponsors</span> <span style="color: #dd0a37;"></span></h3>
+									<h3 class="title"><span>Sponsors</span> <span style="color: #c71239;"></span></h3>
 								</div>
 								<!-- /section title -->
 								<!--Centering the remaining two divs-->
@@ -926,7 +926,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Team</span> <span style="color: #dd0a37;">Members</span></h3>
+					<h3 class="title"><span>Team</span> <span style="color: #c71239;">Members</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -975,7 +975,7 @@
 					<div class="col-md-8">
 						<!-- section title -->
 						<div class="section-title">
-							<h3 class="title"><span>Contact</span> <span style="color: #dd0a37;">Info</span>
+							<h3 class="title"><span>Contact</span> <span style="color: #c71239;">Info</span>
 							</h3>
 						</div>
 						<!-- /section title -->
@@ -1059,9 +1059,13 @@
 		</div>
 	</div>
 	<!-- /Contact -->
-	<hr>
+	<!-- <hr> -->
 	<!-- Footer -->
-	<footer id="footer">
+	<footer id="footer" style="
+    background-color: #0b0d25;
+    box-shadow: 0px -20px 51px -2px #010215;
+    border-radius: 50% 50% 0px 0px;
+">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
@@ -1116,7 +1120,7 @@
 
 		<!-- /copyright -->
 	</footer>
-	<div class="text-center">
+	<div class="text-center" style="background-color: #0b0d25;">
 
 		<!-- <span class="copyright"> -->
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
