--- a/index.html
+++ b/index.html
@@ -102,115 +102,138 @@
 </head>
 
 <body>
-	<div id="backgound_logo"
-		style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;">
-	</div>
-	<a href="#top">
-		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
-			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
-		</div>
-	</a>
-	<!-- Header -->
-	<header id="header" class="transparent-navbar">
-		<!-- container -->
-		<div class="container">
-			<!-- navbar header -->
-			<div class="navbar-header">
-				<!-- Logo -->
-				<div class="navbar-brand">
-					<!-- <a class="logo" href="index.html">
-						<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
-						<img class="logo-alt-img" src="img/osdhack-sticker.png" alt="logo">
-					</a> -->
+
+	<div style="landing_page_wrapper">
+
+
+		<!-- <div id="backgound_logo"
+			style="border-radius:0px 0px 30px 30px;width:100px;height:250px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;">
+		</div> -->
+		<div id="logos" style="z-index: 11;">
+			<a href="#top">
+				<div id="main_logo" style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
+					<img  alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 				</div>
-				<!-- /Logo -->
-
-				<!-- Mobile toggle -->
-				<button class="navbar-toggle">
-					<i class="fa fa-bars"></i>
-				</button>
-				<!-- /Mobile toggle -->
+			</a>
+			<div id="jiit_home_logo"  style="z-index: 999;position: fixed; left: 160px;top: 30px;">
+				<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 70px;">
 			</div>
-			<!-- /navbar header -->
-
-			<!-- Navigation -->
-			<nav id="nav">
-				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#prizes">Prizes</a></li>
-					<li><a href="#guest_speakers">Speakers</a></li>
-					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#contact">Contact</a></li>
-					<li><a href="rules.html" target=_blank>Rules&nbsp;<i class="fa fa-external-link"></i></a></li>
-				</ul>
-			</nav>
-			<!-- /Navigation -->
 		</div>
-		<!-- /container -->
-	</header>
-	<!-- /Header -->
 
-	<div class="stars"></div>
-	<div class="clouds"></div>
-	<div class="twinkling" style="z-index: 2;"></div>
+		<!-- extra design piece -->
+		<div id="rect1" style="z-index:1000;width: 10px; height:100px;background-color: #C0C0C0;position: fixed; top: 80%;"></div>
+		<div id="rect2"></div>
 
-	<!-- Home -->
-	<div id="home">
-		<!-- background image -->
-		<!-- <div class="section-bg" style="background-image:url(img/background01.jpg)"
-			data-stellar-background-ratio="0.5"></div> -->
-		<!-- /background image -->
 
-		<!-- home wrapper -->
-		<div class="home-wrapper" style="z-index: 5;">
+		<div class="stars"></div>		<!--z index 1-->
+		<div class="clouds"></div>		<!--z index 2-->
+		<div class="twinkling"></div>	<!--z index 3-->
+
+		<!-- Header -->
+		<header id="header" class="transparent-navbar" style="z-index: 10;">
 			<!-- container -->
 			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<!-- home content -->
-					<div class="col-md-8 col-md-offset-2">
-						<div class="home-content">
-							<div class="home-organizer" style="color: #c71239;">
-								<h3>Open Source Developers Community</h3>
-								<h4>Jaypee Institute of Information Technology</h4>
-								<p style="color: white;">presents</p>
-								<h3>Kill the cliché</h3>
-							</div>
-							<div class="centro">
-								<h1>OSDHack'22</h1>
-							</div>
-
-							<!-- <h4 class="lead">OSDHack 2022 is a nationwide open hackathon
-								being organised by the Open Source Developers
-								Community of JIIT, Noida. It is a 48-hour long
-								congregation of like-minded hackers and techenthusiasts
-								where participants will brainstorm and
-								build on their idea.</h4> -->
-							<h3 class="lead">20th-23rd January, 2022</h3>
-							<div class="home-links">
-								<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
-									target="_blank" class="main-btn register-btn">Registration</a>
-								<a href="https://discord.io/osdhack22" target="_blank"
-									class="main-btn discord-join-btn">
-									<svg x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50" style=" fill:#fff;">
-										<path
-											d="M 41.625 10.769531 C 37.644531 7.566406 31.347656 7.023438 31.078125 7.003906 C 30.660156 6.96875 30.261719 7.203125 30.089844 7.589844 C 30.074219 7.613281 29.9375 7.929688 29.785156 8.421875 C 32.417969 8.867188 35.652344 9.761719 38.578125 11.578125 C 39.046875 11.867188 39.191406 12.484375 38.902344 12.953125 C 38.710938 13.261719 38.386719 13.429688 38.050781 13.429688 C 37.871094 13.429688 37.6875 13.378906 37.523438 13.277344 C 32.492188 10.15625 26.210938 10 25 10 C 23.789063 10 17.503906 10.15625 12.476563 13.277344 C 12.007813 13.570313 11.390625 13.425781 11.101563 12.957031 C 10.808594 12.484375 10.953125 11.871094 11.421875 11.578125 C 14.347656 9.765625 17.582031 8.867188 20.214844 8.425781 C 20.0625 7.929688 19.925781 7.617188 19.914063 7.589844 C 19.738281 7.203125 19.34375 6.960938 18.921875 7.003906 C 18.652344 7.023438 12.355469 7.566406 8.320313 10.8125 C 6.214844 12.761719 2 24.152344 2 34 C 2 34.175781 2.046875 34.34375 2.132813 34.496094 C 5.039063 39.605469 12.972656 40.941406 14.78125 41 C 14.789063 41 14.800781 41 14.8125 41 C 15.132813 41 15.433594 40.847656 15.621094 40.589844 L 17.449219 38.074219 C 12.515625 36.800781 9.996094 34.636719 9.851563 34.507813 C 9.4375 34.144531 9.398438 33.511719 9.765625 33.097656 C 10.128906 32.683594 10.761719 32.644531 11.175781 33.007813 C 11.234375 33.0625 15.875 37 25 37 C 34.140625 37 38.78125 33.046875 38.828125 33.007813 C 39.242188 32.648438 39.871094 32.683594 40.238281 33.101563 C 40.601563 33.515625 40.5625 34.144531 40.148438 34.507813 C 40.003906 34.636719 37.484375 36.800781 32.550781 38.074219 L 34.378906 40.589844 C 34.566406 40.847656 34.867188 41 35.1875 41 C 35.199219 41 35.210938 41 35.21875 41 C 37.027344 40.941406 44.960938 39.605469 47.867188 34.496094 C 47.953125 34.34375 48 34.175781 48 34 C 48 24.152344 43.785156 12.761719 41.625 10.769531 Z M 18.5 30 C 16.566406 30 15 28.210938 15 26 C 15 23.789063 16.566406 22 18.5 22 C 20.433594 22 22 23.789063 22 26 C 22 28.210938 20.433594 30 18.5 30 Z M 31.5 30 C 29.566406 30 28 28.210938 28 26 C 28 23.789063 29.566406 22 31.5 22 C 33.433594 22 35 23.789063 35 26 C 35 28.210938 33.433594 30 31.5 30 Z">
-										</path>
-									</svg>
-									Join our Discord</a>
-							</div>
-						</div>
+				<!-- navbar header -->
+				<div class="navbar-header">
+					<!-- Logo -->
+					<div class="navbar-brand">
+						<!-- <a class="logo" href="index.html">
+							<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
+							<img class="logo-alt-img" src="img/osdhack-sticker.png" alt="logo">
+						</a> -->
 					</div>
-					<!-- /home content -->
+					<!-- /Logo -->
+
+					<!-- Mobile toggle -->
+					<button class="navbar-toggle">
+						<i class="fa fa-bars"></i>
+					</button>
+					<!-- /Mobile toggle -->
 				</div>
-				<!-- /row -->
+				<!-- /navbar header -->
+
+				<!-- Navigation -->
+				<nav id="nav">
+					<ul class="main-nav nav navbar-nav navbar-right">
+						<li><a href="#home">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#prizes">Prizes</a></li>
+						<li><a href="#guest_speakers">Speakers</a></li>
+						<li><a href="#schedule">Schedule</a></li>
+						<li><a href="#contact">Contact</a></li>
+						<li><a href="rules.html" target=_blank>Rules&nbsp;<i class="fa fa-external-link"></i></a></li>
+					</ul>
+				</nav>
+				<!-- /Navigation -->
 			</div>
 			<!-- /container -->
+		</header>
+		<!-- /Header -->
+
+
+
+		<!-- Home -->
+		<div id="home" style="z-index: 8;">
+			<!-- background image -->
+			<!-- <div class="section-bg" style="background-image:url(img/background01.jpg)"
+				data-stellar-background-ratio="0.5"></div> -->
+			<!-- /background image -->
+
+			<!-- home wrapper -->
+			<div class="home-wrapper">
+				<!-- container -->
+				<div class="container">
+					<!-- row -->
+					<div class="row">
+						<!-- home content -->
+						<div class="col-md-8 col-md-offset-2">
+							<div class="home-content">
+								<div class="home-organizer" style="color: #c71239;">
+									<h3>Open Source Developers Community</h3>
+									<h4>Jaypee Institute of Information Technology</h4>
+									<p style="color: white;">presents</p>
+									<h3>Kill the cliché</h3>
+								</div>
+								<div class="centro">
+									<h1>OSDHack'22</h1>
+								</div>
+
+								<!-- <h4 class="lead">OSDHack 2022 is a nationwide open hackathon
+									being organised by the Open Source Developers
+									Community of JIIT, Noida. It is a 48-hour long
+									congregation of like-minded hackers and techenthusiasts
+									where participants will brainstorm and
+									build on their idea.</h4> -->
+								<h3 class="lead">20th-23rd January, 2022</h3>
+								<div class="home-links">
+									<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
+										target="_blank" class="main-btn register-btn">Registration</a>
+									<a href="https://discord.io/osdhack22" target="_blank"
+										class="main-btn discord-join-btn">
+										<svg x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50" style=" fill:#fff;">
+											<path
+												d="M 41.625 10.769531 C 37.644531 7.566406 31.347656 7.023438 31.078125 7.003906 C 30.660156 6.96875 30.261719 7.203125 30.089844 7.589844 C 30.074219 7.613281 29.9375 7.929688 29.785156 8.421875 C 32.417969 8.867188 35.652344 9.761719 38.578125 11.578125 C 39.046875 11.867188 39.191406 12.484375 38.902344 12.953125 C 38.710938 13.261719 38.386719 13.429688 38.050781 13.429688 C 37.871094 13.429688 37.6875 13.378906 37.523438 13.277344 C 32.492188 10.15625 26.210938 10 25 10 C 23.789063 10 17.503906 10.15625 12.476563 13.277344 C 12.007813 13.570313 11.390625 13.425781 11.101563 12.957031 C 10.808594 12.484375 10.953125 11.871094 11.421875 11.578125 C 14.347656 9.765625 17.582031 8.867188 20.214844 8.425781 C 20.0625 7.929688 19.925781 7.617188 19.914063 7.589844 C 19.738281 7.203125 19.34375 6.960938 18.921875 7.003906 C 18.652344 7.023438 12.355469 7.566406 8.320313 10.8125 C 6.214844 12.761719 2 24.152344 2 34 C 2 34.175781 2.046875 34.34375 2.132813 34.496094 C 5.039063 39.605469 12.972656 40.941406 14.78125 41 C 14.789063 41 14.800781 41 14.8125 41 C 15.132813 41 15.433594 40.847656 15.621094 40.589844 L 17.449219 38.074219 C 12.515625 36.800781 9.996094 34.636719 9.851563 34.507813 C 9.4375 34.144531 9.398438 33.511719 9.765625 33.097656 C 10.128906 32.683594 10.761719 32.644531 11.175781 33.007813 C 11.234375 33.0625 15.875 37 25 37 C 34.140625 37 38.78125 33.046875 38.828125 33.007813 C 39.242188 32.648438 39.871094 32.683594 40.238281 33.101563 C 40.601563 33.515625 40.5625 34.144531 40.148438 34.507813 C 40.003906 34.636719 37.484375 36.800781 32.550781 38.074219 L 34.378906 40.589844 C 34.566406 40.847656 34.867188 41 35.1875 41 C 35.199219 41 35.210938 41 35.21875 41 C 37.027344 40.941406 44.960938 39.605469 47.867188 34.496094 C 47.953125 34.34375 48 34.175781 48 34 C 48 24.152344 43.785156 12.761719 41.625 10.769531 Z M 18.5 30 C 16.566406 30 15 28.210938 15 26 C 15 23.789063 16.566406 22 18.5 22 C 20.433594 22 22 23.789063 22 26 C 22 28.210938 20.433594 30 18.5 30 Z M 31.5 30 C 29.566406 30 28 28.210938 28 26 C 28 23.789063 29.566406 22 31.5 22 C 33.433594 22 35 23.789063 35 26 C 35 28.210938 33.433594 30 31.5 30 Z">
+											</path>
+										</svg>
+										Join our Discord</a>
+								</div>
+							</div>
+						</div>
+						<!-- /home content -->
+					</div>
+					<!-- /row -->
+				</div>
+				<!-- /container -->
+			</div>
+			<!-- /home wrapper -->
 		</div>
-		<!-- /home wrapper -->
+		<!-- /Home -->
+
 	</div>
-	<!-- /Home -->
+
+
+
+
 
 	<!-- About -->
 	<div id="about" class="section">
@@ -333,7 +356,7 @@
 				<!-- /section title -->
 
 				<!-- contact -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 25px;" src="img/jiit logo.png" alt="">
@@ -342,18 +365,20 @@
 							<h3 style="color:white;">Jaypee Institute of <br> Information Technology</h3>
 						</a>
 					</div>
-				</div> <!-- contact -->
-				<div class="col-sm-4">
+				</div>  -->
+				<!-- contact -->
+				<div class="col-sm-7">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/osdc img.png" alt="">
 						</div>
 						<a href="https://osdc.netlify.app/" target="_blank">
-							<h3 style="color:white;"> Open Source Developer's Club</h3>
+							<h3 style="color:white;"> Open Source<br> Developer's Club</h3>
 						</a>
 					</div>
 				</div> <!-- contact -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-1"></div> -->
+				<div class="col-sm-3">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/jodc img.png" alt="">
@@ -365,6 +390,7 @@
 					</div>
 
 				</div>
+				<!-- <div class="col-sm-1"></div> -->
 			</div>
 			<!-- row -->
 		</div>
