added jiit logo on landing page

--- a/index.html
+++ b/index.html
@@ -102,14 +102,17 @@
 </head>
 
 <body>
-	<div id="backgound_logo"
+	<!-- <div id="backgound_logo"
 		style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;">
-	</div>
+	</div> -->
 	<a href="#top">
 		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
 			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 		</div>
 	</a>
+	<div style="z-index: 999;position: fixed; left: 160px;top: 30px;">
+		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 75px;">
+	</div>
 	<!-- Header -->
 	<header id="header" class="transparent-navbar">
 		<!-- container -->
@@ -333,27 +336,18 @@
 				<!-- /section title -->
 
 				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-								style="border-radius: 25px;" src="img/jiit logo.png" alt="">
-						</div>
-						<a href="https://www.jiit.ac.in" target="_blank">
-							<h3 style="color:white;">Jaypee Institute of <br> Information Technology</h3>
-						</a>
-					</div>
-				</div> <!-- contact -->
-				<div class="col-sm-4">
+				
+				<div class="col-sm-7">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/osdc img.png" alt="">
 						</div>
 						<a href="https://osdc.netlify.app/" target="_blank">
-							<h3 style="color:white;"> Open Source Developer's Club</h3>
+							<h3 style="color:white;"> Open Source<br> Developer's Club</h3>
 						</a>
 					</div>
 				</div> <!-- contact -->
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/jodc img.png" alt="">
