Changing devfolio button style

--- a/index.html
+++ b/index.html
@@ -192,13 +192,12 @@
 								build on their idea.</h4> -->
 							<h3 class="lead">20th-23rd January, 2022</h3>
 							<div class="home-links">
-								<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
-									target="_blank" class="main-btn register-btn"><div 
+								<div 
 									class="apply-button" 
 									data-hackathon-slug="osdchack" 
-									data-button-theme="dark-inverted"
+									data-button-theme="light"
 									 style="height: 20px; width: 200px"
-								 ></div></a>
+								 ></div>
 									
 								<a href="https://discord.io/osdhack22" target="_blank"
 									class="main-btn discord-join-btn">
