Added a few changes for devfolio button (#63)
* Pushing final changes

* Integrating devfolio registration button

* Changing devfolio button style

--- a/index.html
+++ b/index.html
@@ -192,8 +192,13 @@
 								build on their idea.</h4> -->
 							<h3 class="lead">20th-23rd January, 2022</h3>
 							<div class="home-links">
-								<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
-									target="_blank" class="main-btn register-btn">Registration</a>
+								<div 
+									class="apply-button" 
+									data-hackathon-slug="osdchack" 
+									data-button-theme="light"
+									 style="height: 20px; width: 200px"
+								 ></div>
+									
 								<a href="https://discord.io/osdhack22" target="_blank"
 									class="main-btn discord-join-btn">
 									<svg x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50" style=" fill:#fff;">
@@ -1138,6 +1143,7 @@
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
 	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+	<script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 
 </body>
 
