--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 		</div>
 	</a>
-	<div style="z-index: 999;position: fixed; left: 160px;top: 30px;">
+	<div style="z-index: 999;position: fixed; left: 160px;top: 25px;">
 		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 75px;">
 	</div>
 	<!-- Header -->
@@ -342,7 +342,7 @@
 
 				<!-- contact -->
 				
-				<div class="col-sm-7">
+				<div class="col-xs-3 col-xs-offset-3">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/osdc img.png" alt="">
@@ -352,7 +352,7 @@
 						</a>
 					</div>
 				</div> <!-- contact -->
-				<div class="col-sm-3">
+				<div class="col-xs-3">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/jodc img.png" alt="">
