fixed responsiveness issue of coordinators tab

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 
 				<!-- contact -->
 				
-				<div class="col-xs-3 col-xs-offset-3">
+				<div class="col-xs-3 col-xs-offset-0"></div>
+				<div class="col-xs-3 col-xs-offset-0">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/osdc img.png" alt="">
@@ -880,7 +881,7 @@
 							</div>
 								<div class="row" style="margin-right: 60px; margin-top: 40px;">
                                 <div class="text-center" style="transform: translateX(37px)">
-									<h4><span style="color: #C0C0C0;font-size: 40px;">Silver</span> &nbsp; <span style="font-size: 40px;">Sponsors</span></h4>
+									<h4><span style="color: #71706E;font-size: 40px;">Silver</span> &nbsp; <span style="font-size: 40px;">Sponsors</span></h4>
 								</div>
 								<div class="col-sm-2">
 									<!--for begining-->
@@ -941,7 +942,10 @@
 					<h4><span style="color:#c71239 ;font-size: 40px;"></span> &nbsp; <span style="font-size: 40px;">Coordinators</span></h4>
 				</div>
 				<!-- contact -->
-				<div class="col-xs-3 col-xs-offset-3">
+				<div class="col-xs-3 col-xs-offset-0">
+					<!--for beginning-->
+				</div>
+				<div class="col-xs-3 col-xs-offset-0">
 					<div class="contact" style="padding:5px" >
 
 						<div class="speaker-img" style="border-radius: 10px;padding: 35px;background-color: rgb(255,255,255,0.1);margin-bottom: 15px;height: 200px;">
