edited the tagline and fixed few responsiveness issues

--- a/index.html
+++ b/index.html
@@ -105,14 +105,18 @@
 	<!-- <div id="backgound_logo"
 		style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;">
 	</div> -->
+
+
 	<a href="#top">
-		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
+		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;" id="osdhack">
 			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 		</div>
 	</a>
-	<div style="z-index: 999;position: fixed; left: 160px;top: 25px;">
+	<div style="z-index: 999;position: fixed; left: 160px;top: 25px;" id="jiit">
 		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 75px;">
 	</div>
+
+
 	<!-- Header -->
 	<header id="header" class="transparent-navbar">
 		<!-- container -->
@@ -178,7 +182,7 @@
 								<h3>Open Source Developers Community</h3>
 								<h4>Jaypee Institute of Information Technology</h4>
 								<p style="color: white;">presents</p>
-								<h3>Kill the cliché</h3>
+								<h2 id="tagline">Kill the cliché</h3>
 							</div>
 							<div class="centro">
 								<h1>OSDHack'22</h1>
