--- a/index.html
+++ b/index.html
@@ -1144,8 +1144,8 @@
 		<!-- <span class="copyright"> -->
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		&copy;
-		<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-			href="https://osdc.netlify.app/" target="_blank">OSDC</a>
+		<script>document.write(new Date().getFullYear());</script> <a
+		href="https://osdc.netlify.app/" target="_blank">OSDC</a>. All rights reserved.
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		<!-- </span> -->
 	</div>
