--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<!-- Header -->
 	<header id="header" class="transparent-navbar">
 		<!-- container -->
-		<div class="container">
+		<div class="container custom-nav">
 			<!-- navbar header -->
 			<div class="navbar-header">
 				<!-- Logo -->
