aligned text in schedule and enhanced prize section (#72)
* aligned text in schedule and enhanced prize section

* minor changes

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Supported </span> <span style="color: #c71239;">by</span></h3>
+					<h3 class="title" style="padding-bottom: 5px;"><span>Organized </span> <span style="color: #c71239;">by</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -381,21 +381,13 @@
 			<div class="row">
 					<!-- section title -->
 					<div class="section-title">
-						<h3 class="title"><span>Prizes</span> <span style="color: #c71239;">and More</span></h3>
+						<h3 class="title"><span>Prizes</span></h3>
 					</div>
 					<!-- /section title -->
 	
 					<!-- contact -->
-					<div class="col-sm-4">
-						<div class="contact">
-							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-									style="border-radius: 50%;" src="img/first.png" alt="">
-							</div>
-								<h3>Rs 30,000</h3>
-							<h4 style="margin-top: -10px;">1st Prize</h4>
-						</div>
-					</div> <!-- contact -->
-					<div class="col-sm-4">
+					
+					<div class="col-sm-4" style="transform: scale(1.1);">
 						<div class="contact">
 							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 									style="border-radius: 50%;" src="img/second.png" alt="">
@@ -404,6 +396,17 @@
 							<h4 style="margin-top: -10px;">2nd Prize</h4>
 						</div>
 					</div> <!-- contact -->
+
+					<div class="col-sm-4" style="transform: scale(1.2);">
+						<div class="contact">
+							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+									style="border-radius: 50%;" src="img/first.png" alt="">
+							</div>
+								<h3>Rs 30,000</h3>
+							<h4 style="margin-top: -10px;">1st Prize</h4>
+						</div>
+					</div> <!-- contact -->
+
 					<div class="col-sm-4">
 						<div class="contact">
 							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
@@ -431,7 +434,7 @@
 								style="border-radius: 50%;" src="img/cup.png" alt="">
 						</div>
 							<h3>Rs 5,000</h3>
-						<h4 style="margin-top: -10px;">Consolation Prize</h4>
+						<h4 style="margin-top: -10px;">Consolation Prize<br> (Best JIIT-Only Team)</h4>
 					</div>
 				</div>
 				<!-- contact -->
@@ -441,7 +444,7 @@
 								style="border-radius: 50%;" src="img/cup.png" alt="">
 						</div>
 							<h3>Rs 5,000</h3>
-						<h4 style="margin-top: -10px;">Consolation Prize(Girls Only)</h4>
+						<h4 style="margin-top: -10px;">Consolation Prize <br>(Best Girls-Only Team)</h4>
 					</div>
 
 				</div>
@@ -464,7 +467,8 @@
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
 			border: 2px solid #c71239;
-			margin-right: 10px;;">Show More </button></div>
+			margin-right: 10px;
+			margin-top: 10px;">Show More </button></div>
 
 
 	<!-- Speakers -->
@@ -583,7 +587,7 @@
 								</div>
 							</div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 12:30 PM - 01:30 PM</p>
+								<p class="event-time" style="padding-top: 35px;"><i class="fa fa-clock-o"></i> 12:30 PM - 01:30 PM</p>
 								<h3 class="event-title">Event Inauguration</h3>
 							</div>
 						</div>
@@ -615,7 +619,7 @@
 								</div>
 
 								<div class="event-content">
-									<p class="event-time"><i class="fa fa-clock-o"></i> 12:00 AM</p>
+									<p class="event-time" style="padding-top: 35px;"><i class="fa fa-clock-o"></i> 12:00 AM</p>
 									<h3 class="event-title">Registrations Close</h3>
 								</div>
 
@@ -650,7 +654,7 @@
 									</div>
 
 									<div class="event-content">
-										<p class="event-time"><i class="fa fa-clock-o"></i> 12:00 PM - 05:00 PM</p>
+										<p class="event-time" style="padding-top: 35px;"><i class="fa fa-clock-o"></i> 12:00 PM - 05:00 PM</p>
 										<h3 class="event-title">Mid Review</h3>
 									</div>
 
@@ -682,7 +686,7 @@
 										</div>
 
 										<div class="event-content">
-											<p class="event-time"><i class="fa fa-clock-o"></i> 10:00 AM - 03:00 PM</p>
+											<p class="event-time" style="padding-top: 35px;"><i class="fa fa-clock-o"></i> 10:00 AM - 03:00 PM</p>
 											<h3 class="event-title">Final Review</h3>
 										</div>
 
@@ -1140,8 +1144,8 @@
 		<!-- <span class="copyright"> -->
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		&copy;
-		<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-			href="https://osdc.netlify.app/" target="_blank">OSDC</a>
+		<script>document.write(new Date().getFullYear());</script> <a
+		href="https://osdc.netlify.app/" target="_blank">OSDC</a>. All rights reserved.
 		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		<!-- </span> -->
 	</div>
