--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
 					</div>
 				</div> <!-- contact -->
 				
@@ -501,7 +501,7 @@
 						<a href="https://www.linkedin.com/in/atrisharma/?originalSubdomain=in" target="_blank">
 							<h3>Atri Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
+						<h4 class="speaker-des atri-sharma-des" style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
 					</div>
 
 				</div>
@@ -518,7 +518,7 @@
 						<a href="https://www.linkedin.com/in/varodek" target="_blank">
 							<h3>Vaibhav Gupta</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Software Engineer, CERN</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Software Engineer, CERN</h4>
 					</div>
 				</div>
 				<!-- contact -->
@@ -532,7 +532,7 @@
 						<a href="https://www.linkedin.com/in/arvindpunk/" target="_blank">
 							<h3>Arvind PJ</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Software Engineer, Gamezop</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Software Engineer, Gamezop</h4>
 					</div>
 
 				</div>
@@ -545,7 +545,7 @@
 						<a href="https://www.linkedin.com/in/amanharitsh123" target="_blank">
 							<h3>Aman Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Site Reliability Engineer, LinkedIn</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Site Reliability Engineer, LinkedIn</h4>
 					</div>
 
 				</div>
