fixed speakers alignment in 768-992px

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
 					</div>
 				</div> <!-- contact -->
 				
@@ -505,7 +505,7 @@
 						<a href="https://www.linkedin.com/in/atrisharma/?originalSubdomain=in" target="_blank">
 							<h3>Atri Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
+						<h4 class="speaker-des atri-sharma-des" style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
 					</div>
 
 				</div>
@@ -522,7 +522,7 @@
 						<a href="https://www.linkedin.com/in/varodek" target="_blank">
 							<h3>Vaibhav Gupta</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Software Engineer, CERN</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Software Engineer, CERN</h4>
 					</div>
 				</div>
 				<!-- contact -->
@@ -536,7 +536,7 @@
 						<a href="https://www.linkedin.com/in/arvindpunk/" target="_blank">
 							<h3>Arvind PJ</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Software Engineer, Gamezop</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Software Engineer, Gamezop</h4>
 					</div>
 
 				</div>
@@ -549,7 +549,7 @@
 						<a href="https://www.linkedin.com/in/amanharitsh123" target="_blank">
 							<h3>Aman Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Site Reliability Engineer, LinkedIn</h4>
+						<h4 class="speaker-des" style="margin-top: -10px;">Site Reliability Engineer, LinkedIn</h4>
 					</div>
 
 				</div>
