fixed many responsiveness issues

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
 
 	<a href="#top">
-		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;" id="osdhack">
-			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
+		<div id="osdhack">
+			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 100%;">
 		</div>
 	</a>
-	<div style="z-index: 999;position: fixed; left: 160px;top: 25px;" id="jiit">
-		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 75px;">
+	<div id="jiit">
+		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 100%;">
 	</div>
 
 
@@ -387,20 +387,20 @@
 	
 					<!-- contact -->
 					
-					<div class="col-sm-4" style="transform: scale(1.1);">
+					<div class="col-sm-4">
 						<div class="contact">
 							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-									style="border-radius: 50%;" src="img/second.png" alt="">
+									style="border-radius: 50%;transform: scale(1.1);" src="img/second.png" alt="">
 							</div>
 								<h3> Rs 20,000</h3>
 							<h4 style="margin-top: -10px;">2nd Prize</h4>
 						</div>
 					</div> <!-- contact -->
 
-					<div class="col-sm-4" style="transform: scale(1.2);">
+					<div class="col-sm-4">
 						<div class="contact">
 							<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-									style="border-radius: 50%;" src="img/first.png" alt="">
+									style="border-radius: 50%;transform: scale(1.2);" src="img/first.png" alt="">
 							</div>
 								<h3>Rs 30,000</h3>
 							<h4 style="margin-top: -10px;">1st Prize</h4>
