--- a/rules.html
+++ b/rules.html
@@ -32,14 +32,19 @@
 			<![endif]-->
 </head>
 <!-- <div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div> -->
-	<a href="index.html" target="_blank">
-		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
-			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
-		</div>
-	</a>
-  <div style="z-index: 999;position: fixed; left: 160px;top: 30px;">
-		<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 75px;">
-	</div>
+
+
+
+<a href="#top">
+  <div id="osdhack">
+    <img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 100%;">
+  </div>
+</a>
+<div id="jiit">
+  <img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 100%;">
+</div>
+
+
 	<!-- Header -->
 	<header id="header" class="transparent-navbar">
 		<!-- container -->
