fixed responsive menu on-click on rules page

--- a/rules.html
+++ b/rules.html
@@ -266,4 +266,5 @@
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   <!-- </span> -->
 </div>
+<script src="./js/jquery.min.js"></script>
 <script src="rules.js"></script>
