fixed silver sponsors alignment in mobile view

--- a/index.html
+++ b/index.html
@@ -877,8 +877,8 @@
 				
 								</div>
 							</div>
-								<div class="row" style="margin-right: 60px; margin-top: 40px;">
-                                <div class="text-center" style="transform: translateX(37px)">
+								<div class="row" style="margin-top: 40px;">
+                                <div class="text-center">
 									<h4><span style="color: #71706E;font-size: 40px;">Silver</span> &nbsp; <span style="font-size: 40px;">Sponsors</span></h4>
 								</div>
 								<div class="col-sm-2">
