Redirect all domains to osdhackjiit.com

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en" id="top">
   <head>
     <meta charset="UTF-8" />
+		
+		<!-- Below two lines will redirect all to osdhackjiit.com -->
+		<meta http-equiv="refresh" content="0; URL=https://osdhackjiit.com" />
+    <link rel="canonical" href="https://osdhackjiit.com" />
+		
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
