--- a/index.html
+++ b/index.html
@@ -1043,8 +1043,8 @@
             </div>
           </div>
         </div>
-        <div class="row" style="margin-right: 60px; margin-top: 40px">
-          <div class="text-center" style="transform: translateX(37px)">
+        <div class="row" style="margin-top: 40px">
+          <div class="text-center">
             <h4>
               <span style="color: #71706e; font-size: 40px">Silver</span> &nbsp;
               <span style="font-size: 40px">Sponsors</span>
